styles/article.scss
.article {
  padding: 1.2rem;
  margin: auto;
  max-width: 1366px;

  p,
  em,
  li {
    color: white;
  }

  p {
    font-size: 1.25rem;
    line-height: 1.45;
    font-weight: lighter;
  }

  &__header {
    margin-bottom: 1.2rem;
    text-align: center;
  }

  &__content {
    max-width: 760px;
    margin: auto;
    > * {
      margin-right: auto;
    }

    &--justified {
      text-align: justify;
    }
  }
}

